--- a/data/maps/map001.mkd
+++ b/data/maps/map001.mkd
@@ -1,1424 +1,1 @@
-{
-  ":type": ":map",
-  ":data": {
-    "^c": "MKD::Map",
-    "@id": 1,
-    "@dev_name": "Top Left Map",
-    "@display_name": "Top Left Map",
-    "@width": 15,
-    "@height": 15,
-    "@tiles": [
-      [
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          2,
-          41
-        ],
-        [
-          2,
-          41
-        ],
-        [
-          2,
-          41
-        ],
-        [
-          2,
-          41
-        ],
-        [
-          2,
-          41
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          2,
-          41
-        ],
-        [
-          2,
-          41
-        ],
-        [
-          2,
-          41
-        ],
-        [
-          2,
-          41
-        ],
-        [
-          2,
-          41
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          2,
-          41
-        ],
-        [
-          2,
-          41
-        ],
-        [
-          2,
-          41
-        ],
-        [
-          2,
-          41
-        ],
-        [
-          2,
-          41
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          2,
-          41
-        ],
-        [
-          2,
-          41
-        ],
-        [
-          2,
-          41
-        ],
-        [
-          2,
-          41
-        ],
-        [
-          2,
-          41
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          2,
-          41
-        ],
-        [
-          2,
-          41
-        ],
-        [
-          2,
-          41
-        ],
-        [
-          2,
-          41
-        ],
-        [
-          2,
-          41
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          1,
-          16
-        ],
-        [
-          1,
-          17
-        ],
-        [
-          1,
-          18
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          1,
-          24
-        ],
-        [
-          1,
-          25
-        ],
-        [
-          1,
-          26
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          1,
-          32
-        ],
-        [
-          1,
-          33
-        ],
-        [
-          1,
-          34
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          1,
-          40
-        ],
-        [
-          1,
-          41
-        ],
-        [
-          1,
-          42
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          1,
-          48
-        ],
-        [
-          1,
-          49
-        ],
-        [
-          1,
-          50
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          9
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ]
-      ],
-      [
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        [
-          1,
-          9
-        ],
-        null,
-        null,
-        null,
-        [
-          0,
-          9
-        ],
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null
-      ]
-    ],
-    "@tilesets": [
-      1,
-      3,
-      5
-    ],
-    "@events": {
-      "1": {
-        "^c": "MKD::Event",
-        "@id": 1,
-        "@name": "New event",
-        "@x": 0,
-        "@y": 0,
-        "@pages": [
-          {
-            "^c": "MKD::Event::Page",
-            "@commands": [
-
-            ],
-            "@conditions": [
-
-            ],
-            "@graphic": {
-              ":type": ":file",
-              ":direction": 2
-            },
-            "@triggers": [
-              [
-                ":action"
-              ]
-            ],
-            "@automoveroute": {
-              ":frequency": 80,
-              ":commands": [
-
-              ]
-            }
-          }
-        ],
-        "@settings": {
-          "^c": "MKD::Event::Settings",
-          "@priority": 1,
-          "@passable": false,
-          "@can_start_surfing_here": true,
-          "@reset_position_on_transfer": true,
-          "@speed": 2.2
-        }
-      }
-    },
-    "@encounter_tables": [
-      {
-        "^c": "EncounterTable",
-        "@density": 0.25,
-        "@battle_music": "",
-        "@battle_background": "",
-        "@battle_base": "",
-        "@list": [
-          [
-            5,
-            {
-              ":species": ":BULBASAUR",
-              ":level": 1
-            }
-          ],
-          [
-            4,
-            {
-              ":species": ":BULBASAUR",
-              ":level": 2
-            }
-          ],
-          [
-            3,
-            {
-              ":species": ":BULBASAUR",
-              ":level": 3
-            }
-          ],
-          [
-            2,
-            {
-              ":species": ":BULBASAUR",
-              ":level": 4
-            }
-          ],
-          [
-            1,
-            {
-              ":species": ":BULBASAUR",
-              ":level": 5
-            }
-          ]
-        ],
-        "@tiles": [
-          [
-            0,
-            6
-          ],
-          [
-            0,
-            7
-          ],
-          [
-            1,
-            7
-          ],
-          [
-            0,
-            8
-          ],
-          [
-            1,
-            8
-          ],
-          [
-            2,
-            8
-          ],
-          [
-            0,
-            9
-          ],
-          [
-            1,
-            9
-          ],
-          [
-            2,
-            9
-          ],
-          [
-            3,
-            9
-          ],
-          [
-            0,
-            10
-          ],
-          [
-            1,
-            10
-          ],
-          [
-            2,
-            10
-          ],
-          [
-            3,
-            10
-          ],
-          [
-            4,
-            10
-          ],
-          [
-            5,
-            10
-          ],
-          [
-            0,
-            11
-          ],
-          [
-            1,
-            11
-          ],
-          [
-            2,
-            11
-          ],
-          [
-            3,
-            11
-          ],
-          [
-            4,
-            11
-          ],
-          [
-            5,
-            11
-          ],
-          [
-            0,
-            12
-          ],
-          [
-            1,
-            12
-          ],
-          [
-            2,
-            12
-          ],
-          [
-            3,
-            12
-          ],
-          [
-            4,
-            12
-          ],
-          [
-            5,
-            12
-          ],
-          [
-            6,
-            12
-          ],
-          [
-            0,
-            13
-          ],
-          [
-            1,
-            13
-          ],
-          [
-            2,
-            13
-          ],
-          [
-            3,
-            13
-          ],
-          [
-            4,
-            13
-          ],
-          [
-            5,
-            13
-          ],
-          [
-            6,
-            13
-          ],
-          [
-            7,
-            13
-          ],
-          [
-            0,
-            14
-          ],
-          [
-            1,
-            14
-          ],
-          [
-            2,
-            14
-          ],
-          [
-            3,
-            14
-          ],
-          [
-            4,
-            14
-          ],
-          [
-            5,
-            14
-          ],
-          [
-            6,
-            14
-          ],
-          [
-            7,
-            14
-          ]
-        ]
-      }
-    ]
-  }
-}
+{":type":":map",":data":{"^c":"MKD::Map","@id":1,"@dev_name":"Top Left Map","@display_name":"Top Left Map","@width":15,"@height":15,"@tiles":[[[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[2,41],[2,41],[2,41],[2,41],[2,41],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[2,41],[2,41],[2,41],[2,41],[2,41],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[2,41],[2,41],[2,41],[2,41],[2,41],[0,0],[0,0],[0,0],[0,0],[0,0],[0,9],[0,0],[0,0],[0,0],[0,0],[2,41],[2,41],[2,41],[2,41],[2,41],[0,0],[0,0],[0,0],[0,0],[0,0],[0,9],[0,0],[0,0],[0,0],[0,0],[2,41],[2,41],[2,41],[2,41],[2,41],[0,0],[1,16],[1,17],[1,18],[0,0],[0,9],[0,9],[0,9],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[1,24],[1,25],[1,26],[0,0],[0,9],[0,9],[0,9],[0,9],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[1,32],[1,33],[1,34],[0,0],[0,9],[0,9],[0,9],[0,9],[0,9],[0,9],[0,0],[0,0],[0,0],[0,0],[0,0],[1,40],[1,41],[1,42],[0,0],[0,9],[0,9],[0,9],[0,9],[0,9],[0,9],[0,0],[0,0],[0,0],[0,0],[0,0],[1,48],[1,49],[1,50],[0,0],[0,9],[0,9],[0,9],[0,9],[0,9],[0,9],[0,9],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,9],[0,9],[0,9],[0,9],[0,9],[0,9],[0,9],[0,9],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,9],[0,9],[0,9],[0,9],[0,9],[0,9],[0,9],[0,9],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0]],[null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,[1,9],null,null,null,[0,9],null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null]],"@tilesets":[1,3,5],"@events":{},"@connections":{":north":[],":east":[],":south":[],":west":[]}}}
