--- a/data/maps/map005.mkd
+++ b/data/maps/map005.mkd
@@ -1,2224 +1,1 @@
-{
-  ":type": ":map",
-  ":data": {
-    "^c": "MKD::Map",
-    "@id": 5,
-    "@dev_name": "Faraday Island",
-    "@display_name": "Faraday Island",
-    "@width": 29,
-    "@height": 31,
-    "@tiles": [
-      [
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        null,
-        null,
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        [
-          0,
-          0
-        ],
-        null,
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        [
-          0,
-          0
-        ],
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null
-      ]
-    ],
-    "@tilesets": [
-      1
-    ],
-    "@events": {
-    }
-  }
-}
+{":type":":map",":data":{"^c":"MKD::Map","@id":5,"@dev_name":"Untitled Map","@display_name":"Untitled Map","@width":15,"@height":15,"@tiles":[[[0,25],[0,24],[0,25],[0,24],[0,25],[0,24],[0,25],[0,24],[0,25],[0,24],[0,25],[0,24],[0,25],[0,24],[0,25],[0,17],[0,16],[0,17],[0,16],[0,17],[0,16],[0,17],[0,16],[0,17],[0,16],[0,17],[0,16],[0,17],[0,16],[0,17],[0,25],[0,24],[0,25],[0,24],[0,25],[0,24],[0,25],[0,24],[0,25],[0,24],[0,25],[0,24],[0,25],[0,24],[0,25],[0,17],[0,16],[0,17],[0,16],[0,17],[0,16],[0,17],[0,16],[0,17],[0,16],[0,17],[0,16],[0,17],[0,16],[0,17],[0,25],[0,24],[0,25],[0,24],[0,25],[0,24],[0,25],[0,24],[0,25],[0,24],[0,25],[0,24],[0,25],[0,24],[0,25],[0,33],[0,32],[0,33],[0,32],[0,33],[0,32],[0,33],[0,32],[0,33],[0,32],[0,33],[0,32],[0,33],[0,32],[0,33],[2,1],[2,1],[2,1],[2,1],[2,1],[2,1],[2,1],[2,1],[2,1],[2,1],[2,1],[2,1],[2,1],[2,1],[2,1],[2,17],[2,17],[2,17],[2,17],[2,17],[2,17],[2,17],[2,17],[2,17],[2,17],[2,17],[2,17],[2,17],[2,17],[2,17],[0,25],[0,24],[0,25],[0,24],[0,25],[0,24],[0,25],[0,24],[0,25],[0,24],[0,25],[0,24],[0,25],[0,24],[0,25],[0,17],[0,16],[0,17],[0,16],[0,17],[0,16],[0,17],[0,16],[0,17],[0,16],[0,17],[0,16],[0,17],[0,16],[0,17],[0,25],[0,24],[0,25],[0,24],[0,25],[0,24],[0,25],[0,24],[0,25],[0,24],[0,25],[0,24],[0,25],[0,24],[0,25],[0,17],[0,16],[0,17],[0,16],[0,17],[0,16],[0,17],[0,16],[0,17],[0,16],[0,17],[0,16],[0,17],[0,16],[0,17],[0,25],[0,24],[0,25],[0,24],[0,25],[0,24],[0,25],[0,24],[0,25],[0,24],[0,25],[0,24],[0,25],[0,24],[0,25],[0,17],[0,16],[0,17],[0,16],[0,17],[0,16],[0,17],[0,16],[0,17],[0,16],[0,17],[0,16],[0,17],[0,16],[0,17],[0,25],[0,24],[0,25],[0,24],[0,25],[0,24],[0,25],[0,24],[0,25],[0,24],[0,25],[0,24],[0,25],[0,24],[0,25]],[null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,21],[0,20],[0,21],[0,20],[0,21],[0,20],[0,21],[0,20],[0,21],[0,20],[0,21],[0,20],[0,21],[0,20],[0,21],null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null]],"@tilesets":[1,3,2],"@events":{},"@connections":{":north":[],":east":[],":south":[],":west":[]}}}
